updates and cleanup

--- a/notebooks/1_introductions_data_handling.ipynb
+++ b/notebooks/1_introductions_data_handling.ipynb
@@ -21,7 +21,7 @@
     "\n",
     "3)  The base idea of splitting data into csv files and how to perform it\n",
     "\n",
-    "When you have performed the data splitting into csv files, you may want to create `yaml` files based on these files for training and prediction. To do this, check the notebooks [Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of Stratified Split for Training and Prediction](2_physionet_stratified_yaml_files.ipynb)"
+    "When you have performed possible preprocessing and the data splitting into csv files, you may want to create `yaml` files based on these files for training and prediction. To do this, check the notebooks [Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of Stratified Split for Training and Prediction](2_physionet_stratified_yaml_files.ipynb)"
    ]
   },
   {
@@ -456,7 +456,7 @@
     "new_directory = os.path.join(os.getcwd(), 'data', 'physionet_preprocessed_smoke')\n",
     "```\n",
     "\n",
-    "`from_directory` refers to the directory where the data in the original format is loaded from, such as downloaded Physionet Challenge data. `new_directory`, as it's name suggests, refers to the new location where the directory tree of the original data location is first copied using a function `copy_tree` from the module `distutils.dir_util`. After this, *each directory in the new location* is iterated over and all the ECGs (which should be in MatLab format) are preprocessed with wanted transforms. *An original version of ECG is afterwards deleted and a preprocessed one saved in the new directory.*\n",
+    "`from_directory` refers to the directory where the data in the original format is loaded from, such as downloaded Physionet Challenge data. `new_directory`, as it's name suggests, refers to the new location where the directory tree of the original data location is first copied using a function `copy_tree` from the module `distutils.dir_util`. After this, *each directory in the new location* is iterated over and all the ECGs (which should be in MatLab format) are preprocessed with wanted transforms. *An original version of ECG is afterwards deleted and the preprocessed one saved in the directory.*\n",
     "\n",
     "By default there are two transforms used, linear interpolation and BandPass filter:\n",
     "\n",
@@ -464,13 +464,13 @@
     "# ------------------------------\n",
     "# --- PREPROCESS TRANSFORMS ----\n",
     "\n",
-    "# - Linear interpolation\n",
-    "linear_interp = Resample2(fs_new = 257, fs_old = fs)\n",
-    "ecg = linear_interp(ecg)\n",
-    "\n",
     "# - BandPass filter \n",
-    "bpf = BandPassFilter(fs = 257)\n",
+    "bpf = BandPassFilter(fs = ecg_fs)\n",
     "ecg = bpf(ecg)\n",
+    "\n",
+    "# - Linear interpolation\n",
+    "linear_interp = Linear_interpolation(fs_new = 257, fs_old = fs)\n",
+    "ecg = linear_interp(ecg)\n",
     "\n",
     "# ------------------------------\n",
     "# ------------------------------\n",
@@ -478,7 +478,7 @@
     "\n",
     "The preprocessing part **is not mandatory for the repository to work**. But if transforms, such as the two mentioned, are used e.g. during the training phase, that can significantly slow down training. That's why it's recommended to preprocess the data before training using the script mentioned.\n",
     "\n",
-    "All the other transforms are set in the script `dataset.py` in `src/dataloader/`, which is run during training. Several transforms are already available in the script `transforms.py` --- from where `Resample2` and `BandPassFilter` can be found too --- in the same path.\n",
+    "All the other transforms are set in the script `dataset.py` in `src/dataloader/`, which is run during training. Several transforms are already available in the script `transforms.py` --- from where `Linear_interpolation` and `BandPassFilter` can be found too --- in the same path.\n",
     "\n",
     "### Terminal command\n",
     "\n",
@@ -575,6 +575,8 @@
     "    \n",
     "Now we can use this structure as a baseline for the data split. Simply, the function `read_split_DB(data_directory, save_directory, labels)` uses this structure and creates csvs based on it. The function parameter `data_directory` refers to the location of the data, `save_directory` refers to the location where the csv files will be saved, and `labels` refers to the list of Snomed CT Coded labels which will be used in the classification. Csv files are named according to the directories from which they were created, e.g., a csv file of CPSC Database and CPSC-Extra Database is names as `CPSC_CPSC-Extra.csv`.\n",
     "\n",
+    "We can use this structure when creating yaml files for training and testing. But for example if we need to train a model using the first four sources in the list and using only the Chapman-Shaoxing database in testing, we need to create combined yaml files for training phase. In training we only give one csv file for a model to read which ECGs to use. The other csv files, in which there are ECGs from different databases, are made in the notebook [Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb) when the training and testing csv files are created.\n",
+    "\n",
     "2) **Stratified**. The function `read_split_stratified(data_directory, save_directory, labels, train_val_splits)` will do the stratified split. The function parameters are similar to the ones with the function `read_split_DB` but there are also `train_val_splits` which refers to the dictionary of the splits wanted to perform.\n",
     "\n",
     "Stratification is performed by the multilabel cross validator `MultilabelStratifiedShuffleSplit(n_splits, test_size, train_size, random_state)` from `iterative-stratification` package. The script will be using n_splits sized of the length of training dataset (in the yaml file it will be *4* as data is gathered from 'G12EC', 'INCART', 'PTB_PTBXL' and 'ChapmanShaoxing_Ningbo'). *n_splits must always be at least 2!* More information about this and other multilabel cross validators is available in [the GitHub repository of iterative-stratification](https://github.com/trent-b/iterative-stratification)."
@@ -605,7 +607,9 @@
    "id": "5440b5d2",
    "metadata": {},
    "source": [
-    "### Example: Smoke testing"
+    "-------------\n",
+    "\n",
+    "## Example: Smoke testing"
    ]
   },
   {
@@ -613,9 +617,22 @@
    "id": "b3484469",
    "metadata": {},
    "source": [
-    "*All the files for smoke testing are available in the repository.*\n",
+    "*All the data files for smoke testing are available in the repository.*\n",
     "\n",
-    "First, the script `prepare_data.py` should have the attribute `label` set as\n",
+    "First, we want to preprocess the data. We make sure that the script `preprocess_data.py` has the original and new directories set as follows\n",
+    "\n",
+    "```\n",
+    "from_directory = os.path.join(os.getcwd(), 'data', 'physionet_data_smoke')\n",
+    "new_directory = os.path.join(os.getcwd(), 'data', 'physionet_preprocessed_smoke')\n",
+    "```\n",
+    "\n",
+    "So the attribute `from_directory` refers to the directory where the original data is located, and the attribute `new_directory` where the preprocessed data is saved. Now we can perform preprocessing with the following command:\n",
+    "\n",
+    "```\n",
+    "python preprocess_data.py\n",
+    "```\n",
+    "\n",
+    "As data is preprocessed, we can move on to the splitting part. The script `prepare_data.py` should have the attribute `label` set as\n",
     "\n",
     "```\n",
     "labels = ['426783006', '426177001', '164934002', '427084000', '164890007', '39732003', '164889003', '59931005', '427393009', '270492004']\n",
@@ -687,7 +704,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -701,7 +718,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "16f5b46f222e2a3e8d4adbf7141cae37b71ed37616e60735fa5d1164a1bc3ada"
+   }
   }
  },
  "nbformat": 4,
