--- a/notebooks/3_introductions_training.ipynb
+++ b/notebooks/3_introductions_training.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "Training can be performed either with a single yaml file or with several yaml files located in the same directory.\n",
     "\n",
-    "To train a model, you'll need csv files to tell a model which part of the data are used as training data, which part as validation data and which part as testing data, and yaml files based on these csv files for detailed configurations. The csv files can be created by following the introductions in the notebook [Introductions for Data Handling](1_introductions_data_handling.ipynb). Yaml files can be created with the notebooks [Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of Stratified Split for Training and Prediction](2_physionet_stratified_yaml_files.ipynb).\n",
+    "To train a model, you'll need csv files to tell a model which parts of the data (i.e., which ECGs) are used as training data, which part as validation data and which part as testing data, and yaml files based on these csv files for detailed configurations. The csv files can be created by following the introductions in the notebook [Introductions for Data Handling](1_introductions_data_handling.ipynb). Yaml files can be created with the notebooks [Yaml files of Database-wise Split for Training and Prediction](2_physionet_DBwise_yaml_files.ipynb) and [Yaml files of Stratified Split for Training and Prediction](2_physionet_stratified_yaml_files.ipynb).\n",
     "\n",
     "------\n"
    ]
@@ -78,7 +78,7 @@
     "\n",
     "```\n",
     "python train_model.py train_smoke.yaml\n",
-    "python train_model.py training_multiple_smoke\n",
+    "python train_model.py train_multiple_smoke\n",
     "```"
    ]
   },
@@ -87,6 +87,8 @@
    "id": "1ee2a8fd",
    "metadata": {},
    "source": [
+    "-----------------\n",
+    "\n",
     "## Example: Smoke testing"
    ]
   },
@@ -97,7 +99,7 @@
    "source": [
     "### One yaml file\n",
     "\n",
-    "Let's use the presented yaml file `train_smoke.yaml` from `/configs/training/` in smoke testing. The csv files `train_split0_0.csv` and `val_split0_0.csv` have already been constructed with the script `prepare_data.py`. The first rows from both csvs are as follows\n",
+    "Let's use the presented yaml file `train_smoke.yaml` from `/configs/training/` in smoke testing. The csv files `train_split0_0.csv` and `val_split0_0.csv` have already been constructed with the script `prepare_data.py`. That said, we are training model using the stratified split of the data. The first rows from both csvs are as follows\n",
     "\n",
     "Train csv:\n",
     "```\n",
@@ -144,31 +146,42 @@
     "python train_model.py train_smoke.yaml\n",
     "```\n",
     "\n",
-    "A trained model and training history can be found as `train_smoke.pth` and `train_smoke_history.pickle` in the `experiments` directory. ROC curves are saved in the `ROC_train_smoke` directory as `roc-e1.png`, `roc-e2.png` etc, named after the number of the epoch on which it's been drawn.\n",
+    "The trained model and training history can be found as `train_smoke.pth` and `train_smoke_history.pickle` in the `experiments` directory. ROC curves are saved in the `ROC_train_smoke` directory as `roc-e1.png`, `roc-e2.png` etc, named after the number of the epoch on which it's been drawn.\n",
     "\n",
     "### Multiple yaml files in a directory\n",
     "\n",
-    "The idea is similar here: Now you should locate all the yaml files constructed as the presented yaml file `train_smoke.yaml`. There are a directory `train_multiple_smoke` in `/configs/training/` in which there are three yaml files named as `smoke0.yaml`, `smoke1.yaml` and `smoke2.yaml`. Each yaml file has different yaml files for training and validation as follows\n",
+    "The idea is similar here: Now you should locate all the yaml files constructed as the presented yaml file `train_smoke.yaml`. There are a directory `train_multiple_smoke` in `/configs/training/` in which there are two yaml files named as `split0_0.yaml` and `split0_1.yaml`. Each yaml file has different yaml files for training and validation as follows\n",
     "\n",
-    "`smoke0.yaml`\n",
+    "`split0_0.yaml`:\n",
     "```\n",
-    "train_file: 'train_split1_0.csv'\n",
-    "val_file: 'val_split1_0.csv'\n",
-    "```\n",
+    "# INITIAL SETTINGS\n",
+    "train_file: train_split0_0.csv\n",
+    "val_file: val_split0_0.csv\n",
     "\n",
-    "`smoke1.yaml`\n",
-    "```\n",
-    "train_file: 'train_split1_1.csv'\n",
-    "val_file: 'val_split1_1.csv'\n",
-    "```\n",
+    "# TRAINING SETTINGS\n",
+    "batch_size: 10\n",
+    "num_workers: 0\n",
     "\n",
-    "`smoke2.yaml`\n",
-    "```\n",
-    "train_file: 'train_split1_2.csv'\n",
-    "val_file: 'val_split1_2.csv'\n",
+    "# SAVE, LOAD AND DISPLAY INFORMATION\n",
+    "epochs: 1\n",
     "```\n",
     "\n",
-    "So each csv file has been constructed in the same stratification (the number right after 'split' which is now 1).\n",
+    "`split0_1.yaml`:\n",
+    "```\n",
+    "# INITIAL SETTINGS\n",
+    "train_file: train_split0_1.csv\n",
+    "val_file: val_split0_1.csv\n",
+    "\n",
+    "# TRAINING SETTINGS\n",
+    "batch_size: 10\n",
+    "num_workers: 0\n",
+    "\n",
+    "# SAVE, LOAD AND DISPLAY INFORMATION\n",
+    "epochs: 1\n",
+    "\n",
+    "```\n",
+    "\n",
+    "Both of the files are constructed from the same stratified split where training data is from databases G12EC, INCART, PTB_PTBXL, ChapmanShaoxing_Ningbo as it was instructed in  `physionet_stratified_smoke.yaml`.\n",
     "\n",
     "The paths in `train_model.py` should still be set as below\n",
     "\n",
@@ -191,7 +204,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('physionet')",
    "language": "python",
    "name": "python3"
   },
@@ -206,6 +219,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "46963f0590c8313baefd57cb1336ee0094ee3a6da0b1eb974571013be2a14d92"
+   }
   }
  },
  "nbformat": 4,
