--- a/notebooks/2_physionet_DBwise_yaml_files.ipynb
+++ b/notebooks/2_physionet_DBwise_yaml_files.ipynb
@@ -7,14 +7,14 @@
    "source": [
     "# Yaml files of Database-wise Split for Training and Prediction\n",
     "\n",
-    "With this notebook, you can create the yaml files needed in training and prediction with a data split which is made database-wise. The so-called \"original data split\" should be first made as with the script `prepare_data.py`. More detailed information about this is available in the notebook [Introductions for Data Handling](1_introductions_data_handling.ipynb). \n",
+    "With this notebook, you can create the yaml files needed in training and prediction with a data split which is made database-wise. The so-called \"original data split\" should be first made with the script `prepare_data.py`. More detailed information about this is available in the notebook [Introductions for Data Handling](1_introductions_data_handling.ipynb). \n",
     "\n",
     "------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "id": "d2f21607",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
     "train_yaml_save_path = os.path.join('../configs/training', 'train_DBwise_smoke')\n",
     "\n",
     "# Where to save the testing yaml files\n",
-    "test_yaml_save_path = os.path.join('../configs/predicting', 'prediction_DBwise_smoke')\n",
+    "test_yaml_save_path = os.path.join('../configs/predicting', 'predict_DBwise_smoke')\n",
     "\n",
     "# The files which need to be split into training and validation data\n",
     "# We have 5 different databases so 5 different train/val split sets\n",
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "id": "f005f047",
    "metadata": {},
    "outputs": [
@@ -76,11 +76,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPSC_CPSC-Extra.csv\n",
-      "PTB_PTBXL.csv\n",
       "ChapmanShaoxing_Ningbo.csv\n",
+      "CPSC_CPSC-Extra.csv\n",
       "G12EC.csv\n",
-      "INCART.csv\n"
+      "INCART.csv\n",
+      "PTB_PTBXL.csv\n"
      ]
     }
    ],
@@ -210,12 +210,12 @@
    "id": "c2775f96",
    "metadata": {},
    "source": [
-    "Let's make a function to find all these combinations."
+    "Let's make a function to find the combinations set in the attribute `training_data`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "9b4c3f9e",
    "metadata": {
     "scrolled": false
@@ -289,7 +289,7 @@
    "id": "a5545131",
    "metadata": {},
    "source": [
-    "Let's make the combined csv files since the yaml files in the training phase use two attributes --- `train_file` and `val_file:` --- so need to set the above information to them. All of these will be saved in the `/configs/training`. The yaml files for predictions are constructed to `/configs/testing`."
+    "Let's make the combined csv files since the yaml files in the training phase use two attributes --- `train_file` and `val_file` ---, and all the information of training data should be found from one csv file. I.e., all ECGs in training should be listed in one csv file. All of the yaml files for training will be saved to `/configs/training`. The yaml files for predicting will be saved to `/configs/predicting`."
    ]
   },
   {
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "id": "bfa36ae7",
    "metadata": {
     "scrolled": false
@@ -356,7 +356,6 @@
    "source": [
     "import pandas as pd\n",
     "from ruamel.yaml import YAML\n",
-    "import ruamel.yaml\n",
     " \n",
     "# Names for yaml files\n",
     "element_count = sum([len(elem) for elem in combinations_data]) # Counting all the elements in a list of lists\n",
@@ -415,11 +414,12 @@
     "def combine_csv(files, i):\n",
     "    '''Combine all files in the list of train csv files. Save the result as a csv file.\n",
     "    ''' \n",
+    "\n",
+    "    # As we con't have csv files of combined databases for training let's make them\n",
     "    train_csv_name = [os.path.basename(file).split('.')[0] for file in files[0]]\n",
     "    train_csv_name = '_'.join(train_csv_name) + '.csv'\n",
     "    train_files = [os.path.join(csv_path, f) for f in files[0]]\n",
     "    combined_train_csv = pd.concat([pd.read_csv(f) for f in train_files], ignore_index = True)\n",
-    "    \n",
     "    print('Saving combined training data as', train_csv_name, 'with a length of {}.'.format(len(combined_train_csv)))\n",
     "\n",
     "    save_path = combined_save_path\n",
@@ -454,9 +454,9 @@
    "id": "b4622c35",
    "metadata": {},
    "source": [
-    "Now all the yaml files for training, validation and prediction are created! The training yaml files are located in `/configs/training/train_DBwise_smoke/` and the prediction yaml files in `/configs/predicting/prediction_DBwise_smoke/`.\n",
+    "Now all the yaml files for training, validation and prediction are created! The training yaml files are located in `/configs/training/train_DBwise_smoke/` and the prediction yaml files in `/configs/predicting/predict_DBwise_smoke/`. There are also the combined csv files for ECGs themselves created in `/data/split_csvs/physionet_DBwise_smoke/`.\n",
     "\n",
-    "<font color=red>**NOTE 1!**</font> It is extremely important that in the test yaml file the model is set with the same name as the yaml file which the model is trained with. E.g. when a model is trained using `split0.yaml`, it will be saved as `split0.pth`. This makes using the repository much easier and simpler. Mind this, if you want to edit the code below.\n",
+    "<font color=red>**NOTE 1!**</font> It is extremely important that in the prediction yaml file the model is set with the same name as the yaml file which the model is trained with. E.g. when a model is trained using `split0.yaml`, it will be saved as `split0.pth`. This makes using the repository much easier and simpler. Mind this, if you want to edit the code below.\n",
     "\n",
     "<font color=red>**NOTE 2!**</font> If you are now wondering why the yaml files don't have the csv values in single quotation marks, it's ok. Scripts are able to read and load the values from the yaml files even without those marks!"
    ]
@@ -464,7 +464,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('physionet')",
    "language": "python",
    "name": "python3"
   },
@@ -479,6 +479,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "46963f0590c8313baefd57cb1336ee0094ee3a6da0b1eb974571013be2a14d92"
+   }
   }
  },
  "nbformat": 4,
