--- a/notebooks/2_physionet_stratified_yaml_files.ipynb
+++ b/notebooks/2_physionet_stratified_yaml_files.ipynb
@@ -31,7 +31,7 @@
     "train_yaml_save_path = os.path.join('../configs/training', 'train_stratified_smoke')\n",
     "\n",
     "# Where to save the testing yaml files\n",
-    "test_yaml_save_path = os.path.join('../configs/predicting', 'prediction_stratified_smoke')\n",
+    "test_yaml_save_path = os.path.join('../configs/predicting', 'predict_stratified_smoke')\n",
     "\n",
     "# Parameters for training yaml files\n",
     "batch_size = 10\n",
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6c178529",
    "metadata": {},
    "outputs": [
@@ -240,8 +240,6 @@
    "source": [
     "import os\n",
     "from ruamel.yaml import YAML\n",
-    "import ruamel.yaml\n",
-    "import sys\n",
     "  \n",
     "def save_yaml(yaml_str, yaml_path, split):\n",
     "    ''' Save the given string as a yaml file in the given location.\n",
@@ -315,7 +313,7 @@
    "id": "9d9f7428",
    "metadata": {},
    "source": [
-    "Now all the yaml files for training, validation and prediction are created! The training yaml files are located in `/configs/training/train_stratified_smoke/` names as `split0_0.yaml`, `split0_1.yaml`. `split0_2.yaml` and `split0_3.yaml`, and the prediction yaml files in `/configs/predicting/prediction_stratified_smoke/` named with the same names.\n",
+    "Now all the yaml files for training, validation and prediction are created! The training yaml files are located in `/configs/training/train_stratified_smoke/` named as `split0_0.yaml`, `split0_1.yaml`. `split0_2.yaml` and `split0_3.yaml`, and the prediction yaml files in `/configs/predicting/predict_stratified_smoke/` named with the same names.\n",
     "\n",
     "<font color=red>**NOTE 1!**</font> It is extremely important that in the test yaml file the model is set with the same name as the yaml file which the model is trained with. E.g. when a model is trained using `split0_0.yaml`, it will be saved as `split0_0.pth`. This makes using the repository much easier and simpler. Mind this, if you want to edit the code below.\n",
     "\n",
@@ -325,7 +323,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('physionet')",
    "language": "python",
    "name": "python3"
   },
@@ -340,6 +338,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "46963f0590c8313baefd57cb1336ee0094ee3a6da0b1eb974571013be2a14d92"
+   }
   }
  },
  "nbformat": 4,
