--- a/notebooks/cheatsheet.ipynb
+++ b/notebooks/cheatsheet.ipynb
@@ -120,14 +120,14 @@
     "\n",
     "Run:\n",
     "```\n",
-    "python train_model.py <yaml file OR directory>\n",
+    "python test_model.py <yaml file OR directory>\n",
     "```"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.4 ('physionet')",
    "language": "python",
    "name": "python3"
   },
@@ -142,6 +142,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "46963f0590c8313baefd57cb1336ee0094ee3a6da0b1eb974571013be2a14d92"
+   }
   }
  },
  "nbformat": 4,
