--- a/notebooks/2_physionet_DBwise_yaml_files.ipynb
+++ b/notebooks/2_physionet_DBwise_yaml_files.ipynb
@@ -5,38 +5,51 @@
    "id": "7999d565",
    "metadata": {},
    "source": [
-    "# Yaml files of Database-wise Split for Training and Prediction\n",
+    "# Yaml files of Database-wise Split for Training and Testing\n",
     "\n",
-    "With this notebook, you can create the yaml files needed in training and prediction with a data split which is made database-wise. The so-called \"original data split\" should be first made with the script `prepare_data.py`. More detailed information about this is available in the notebook [Introductions for Data Handling](1_introductions_data_handling.ipynb). \n",
+    "With this notebook, you can create the yaml files needed in training and testing with a data split which is made **database-wise**. The so-called \"original data split\" should be first made with the script `create_data_split_csvs.py`. This ensures that there are already one csv file for each database. The combined csv files are created below. More detailed information about this is available in the notebook [Introduction for Data Handling](1_introduction_data_handling.ipynb). \n",
     "\n",
     "------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "d2f21607",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e:\\git\\12-lead-ecg-classifier\\data\\split_csvs\\physionet_DBwise_smoke\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Absolute path of this file\n",
+    "abs_path = Path(os.path.abspath(''))\n",
     "\n",
     "# PARAMETERS TO CREATE DBWISE YAML FILES  \n",
     "# ----------------------------------------\n",
     "\n",
     "# From where to load the csv files of \"original data split\"\n",
-    "csv_path = os.path.join('../data/split_csvs/', 'physionet_DBwise_smoke')\n",
+    "csv_path = os.path.join(abs_path.parent.absolute(), 'data', 'split_csvs', 'physionet_DBwise_smoke')\n",
+    "print(csv_path)\n",
     "\n",
     "# Where to save combined training csv files\n",
     "# e.g. we want to use PTB_PTBXL.csv, INCART.csv and G12EC.csv for training\n",
     "#      so we need to combine them first for the model to use them\n",
-    "combined_save_path = os.path.join('../data/split_csvs', 'physionet_DBwise_smoke')\n",
+    "combined_save_path = os.path.join(abs_path.parent.absolute(), 'data', 'split_csvs', 'physionet_DBwise_smoke')\n",
     "\n",
     "# Where to save the training yaml files\n",
-    "train_yaml_save_path = os.path.join('../configs/training', 'train_DBwise_smoke')\n",
+    "train_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'training', 'train_DBwise_smoke')\n",
     "\n",
     "# Where to save the testing yaml files\n",
-    "test_yaml_save_path = os.path.join('../configs/predicting', 'predict_DBwise_smoke')\n",
+    "test_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'predicting', 'prediction_DBwise_smoke')\n",
     "\n",
     "# The files which need to be split into training and validation data\n",
     "# We have 5 different databases so 5 different train/val split sets\n",
@@ -63,12 +76,12 @@
    "id": "ced2ffe0",
    "metadata": {},
    "source": [
-    "First, we need to find the csv files from which we want to create the yaml files. They should be located in `/data/split_csvs/`."
+    "First, the csv files, from which the yaml files are created, need to be found. They should be located in `/data/split_csvs/`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "f005f047",
    "metadata": {},
    "outputs": [
@@ -109,7 +122,7 @@
    "id": "a20b7fe9",
    "metadata": {},
    "source": [
-    "Out of the above listed csv files we want to make the database-wise splits for training, validation and prediction. So all the possible splits are as follows\n",
+    "Yaml files are created based on the csv files listed above. Yaml files can be divided into training, validation and testing yaml files. All the possible splits are as follows\n",
     "\n",
     "```\n",
     "1) CPSC_CPSC-Extra.csv for test data\n",
@@ -210,12 +223,12 @@
    "id": "c2775f96",
    "metadata": {},
    "source": [
-    "Let's make a function to find the combinations set in the attribute `training_data`."
+    "Let's make a function to find the combinations which are set in the `training_data` attribute."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "9b4c3f9e",
    "metadata": {
     "scrolled": false
@@ -273,7 +286,7 @@
    "id": "e3539b31",
    "metadata": {},
    "source": [
-    "Now we have all the combinations of training and validation splits in `data_1`, `data_2` etc."
+    "All the different training, validation and testing splits are stored in the `combinations_data` attribute. "
    ]
   },
   {
@@ -289,7 +302,7 @@
    "id": "a5545131",
    "metadata": {},
    "source": [
-    "Let's make the combined csv files since the yaml files in the training phase use two attributes --- `train_file` and `val_file` ---, and all the information of training data should be found from one csv file. I.e., all ECGs in training should be listed in one csv file. All of the yaml files for training will be saved to `/configs/training`. The yaml files for predicting will be saved to `/configs/predicting`."
+    "Let's make the combined csv files as the yaml files in the training phase use two attributes --- `train_file` and `val_file` ---, and all the information of training data should be found from one csv file. I.e., all ECGs in training should be listed in one csv file, and respectively, all ECGs for validation should be listed in another csv file, as well as the ECGs for testing. All the yaml files for training will be saved to `/configs/training`. The yaml files for testing will be saved to `/configs/predicting`."
    ]
   },
   {
@@ -297,7 +310,7 @@
    "id": "eab04070",
    "metadata": {},
    "source": [
-    "For reminder, the base of the training yaml files is as follows\n",
+    "The base of the training yaml files is as follows\n",
     "\n",
     "```\n",
     "# INITIAL SETTINGS\n",
@@ -313,7 +326,7 @@
     "\n",
     "```\n",
     "\n",
-    "and the one of the prediction yaml files as follows\n",
+    "and the one of the testing yaml files as follows\n",
     "\n",
     "```\n",
     "# INITIAL SETTINGS\n",
@@ -324,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "bfa36ae7",
    "metadata": {
     "scrolled": false
@@ -454,9 +467,9 @@
    "id": "b4622c35",
    "metadata": {},
    "source": [
-    "Now all the yaml files for training, validation and prediction are created! The training yaml files are located in `/configs/training/train_DBwise_smoke/` and the prediction yaml files in `/configs/predicting/predict_DBwise_smoke/`. There are also the combined csv files for ECGs themselves created in `/data/split_csvs/physionet_DBwise_smoke/`.\n",
+    "Now all the yaml files for training, validation and prediction are created! The training yaml files are located in `/configs/training/train_DBwise_smoke/` and the testing yaml files in `/configs/predicting/predict_DBwise_smoke/`. There are also the combined csv files for ECGs themselves created in `/data/split_csvs/physionet_DBwise_smoke/`.\n",
     "\n",
-    "<font color=red>**NOTE 1!**</font> It is extremely important that in the prediction yaml file the model is set with the same name as the yaml file which the model is trained with. E.g. when a model is trained using `split0.yaml`, it will be saved as `split0.pth`. This makes using the repository much easier and simpler. Mind this, if you want to edit the code below.\n",
+    "<font color=red>**NOTE 1!**</font> It is extremely important that in the testing yaml file the model is set with the same name as the yaml file which the model is trained with. E.g. when a model is trained using `split0.yaml`, it will be saved as `split0.pth`. This makes using the repository much easier and simpler. Mind this, if you want to edit the code below.\n",
     "\n",
     "<font color=red>**NOTE 2!**</font> If you are now wondering why the yaml files don't have the csv values in single quotation marks, it's ok. Scripts are able to read and load the values from the yaml files even without those marks!"
    ]
