--- a/notebooks/2_physionet_stratified_yaml_files.ipynb
+++ b/notebooks/2_physionet_stratified_yaml_files.ipynb
@@ -5,33 +5,37 @@
    "id": "dca53a29",
    "metadata": {},
    "source": [
-    "# Yaml files of Stratified Split for Training and Prediction\n",
+    "# Yaml files of Stratified Split for Training and Testing\n",
     "\n",
-    "With this notebook, you can create the yaml files needed in training and prediction with a data split which is made  using **stratifiction**. More detailed information about the stratified data split itself is available in the notebook [Introductions for Data Handling](1_introductions_data_handling.ipynb).\n",
+    "With this notebook, you can create the yaml files needed in training and testing with a data split which is made  using **stratifiction**. More detailed information about the stratified data split itself is available in the notebook [Introduction for Data Handling](1_introduction_data_handling.ipynb).\n",
     "\n",
     "------"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "b88b00d1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "from pathlib import Path\n",
+    "\n",
+    "# Absolute path of this file\n",
+    "abs_path = Path(os.path.abspath(''))\n",
     "\n",
     "# PARAMETERS TO CREATE STRATIFIED YAML FILES  \n",
     "# ------------------------------------------\n",
     "\n",
     "# From where to load the csv files of stratified split\n",
-    "csv_path = os.path.join('../data/split_csvs/', 'physionet_stratified_smoke')\n",
+    "csv_path = os.path.join(abs_path.parent.absolute(), 'data', 'split_csvs', 'physionet_stratified_smoke')\n",
     "\n",
     "# Where to save the training yaml files\n",
-    "train_yaml_save_path = os.path.join('../configs/training', 'train_stratified_smoke')\n",
+    "train_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'training', 'train_stratified_smoke')\n",
     "\n",
     "# Where to save the testing yaml files\n",
-    "test_yaml_save_path = os.path.join('../configs/predicting', 'predict_stratified_smoke')\n",
+    "test_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'predicting', 'prediction_stratified_smoke')\n",
     "\n",
     "# Parameters for training yaml files\n",
     "batch_size = 10\n",
@@ -44,12 +48,12 @@
    "id": "e256917d",
    "metadata": {},
    "source": [
-    "The csv files of the stratified splits should be found `/data/split_csvs/`. "
+    "The directory of the csv files of the stratified splits should be found from `/data/split_csvs/`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "1c57b038",
    "metadata": {},
    "outputs": [
@@ -57,15 +61,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "test_split0.csv\n",
-      "train_split0_0.csv\n",
-      "train_split0_1.csv\n",
-      "train_split0_2.csv\n",
-      "train_split0_3.csv\n",
-      "val_split0_0.csv\n",
-      "val_split0_1.csv\n",
-      "val_split0_2.csv\n",
-      "val_split0_3.csv\n"
+      "test_split_1.csv\n",
+      "train_split_1_1.csv\n",
+      "train_split_1_2.csv\n",
+      "train_split_1_3.csv\n",
+      "train_split_1_4.csv\n",
+      "val_split_1_1.csv\n",
+      "val_split_1_2.csv\n",
+      "val_split_1_3.csv\n",
+      "val_split_1_4.csv\n"
      ]
     }
    ],
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "b0dedbb0",
    "metadata": {
     "scrolled": false
@@ -99,16 +103,20 @@
      "output_type": "stream",
      "text": [
       "First 5 training and validatin pairs\n",
-      "('train_split0_0.csv', 'val_split0_0.csv')\n",
-      "('train_split0_1.csv', 'val_split0_1.csv')\n",
-      "('train_split0_2.csv', 'val_split0_2.csv')\n",
-      "('train_split0_3.csv', 'val_split0_3.csv')\n",
+      "('train_split_1_1.csv', 'val_split_1_1.csv')\n",
+      "('train_split_1_2.csv', 'val_split_1_2.csv')\n",
+      "('train_split_1_3.csv', 'val_split_1_3.csv')\n",
+      "('train_split_1_4.csv', 'val_split_1_4.csv')\n",
       "\n",
+      "<re.Match object; span=(5, 15), match='_split_1_1'>\n",
+      "<re.Match object; span=(5, 15), match='_split_1_2'>\n",
+      "<re.Match object; span=(5, 15), match='_split_1_3'>\n",
+      "<re.Match object; span=(5, 15), match='_split_1_4'>\n",
       "Training, validation and testing pairs\n",
-      "['train_split0_0.csv', 'val_split0_0.csv', 'test_split0.csv']\n",
-      "['train_split0_1.csv', 'val_split0_1.csv', 'test_split0.csv']\n",
-      "['train_split0_2.csv', 'val_split0_2.csv', 'test_split0.csv']\n",
-      "['train_split0_3.csv', 'val_split0_3.csv', 'test_split0.csv']\n",
+      "['train_split_1_1.csv', 'val_split_1_1.csv', 'test_split_1.csv']\n",
+      "['train_split_1_2.csv', 'val_split_1_2.csv', 'test_split_1.csv']\n",
+      "['train_split_1_3.csv', 'val_split_1_3.csv', 'test_split_1.csv']\n",
+      "['train_split_1_4.csv', 'val_split_1_4.csv', 'test_split_1.csv']\n",
       "\n",
       "Total of 4 training, validation and testing sets\n"
      ]
@@ -189,12 +197,12 @@
     "\n",
     "*Feel free to set the attributes for training settings and other information as you want in the very first code chunk.* \n",
     "\n",
-    "<font color = red>**NOTE!**</font> (*Consider only if you have already created all the csv files of different stratified splits.*) Feel also free to create only a part of the yaml files. All the train-val-test sets are listed in the variable `train_val_test` so it's easy to iterate over only a part of it. If you want to part it, remember to consider `split_nums` too since the yaml files will be named after it."
+    "<font color = red>**NOTE!**</font> Feel also free to create only a part of the yaml files. All the train-val-test sets are listed in the `train_val_test` attribute so it's easy to iterate over only a part of it. If you want to part it, remember to consider the `split_nums` attribute too as the yaml files will be named after it. It's a list including split numbers extracted from the csv files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "0a529496",
    "metadata": {},
    "outputs": [],
@@ -210,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "6c178529",
    "metadata": {},
    "outputs": [
@@ -219,20 +227,20 @@
      "output_type": "stream",
      "text": [
       "Training, validation and testing set is\n",
-      "train_split0_0 \t val_split0_0 \t test_split0\n",
-      "Yaml file will be named as split0_0.yaml\n",
+      "train_split_1_1 \t val_split_1_1 \t test_split_1\n",
+      "Yaml file will be named as split_1_1.yaml\n",
       "\n",
       "Training, validation and testing set is\n",
-      "train_split0_1 \t val_split0_1 \t test_split0\n",
-      "Yaml file will be named as split0_1.yaml\n",
+      "train_split_1_2 \t val_split_1_2 \t test_split_1\n",
+      "Yaml file will be named as split_1_2.yaml\n",
       "\n",
       "Training, validation and testing set is\n",
-      "train_split0_2 \t val_split0_2 \t test_split0\n",
-      "Yaml file will be named as split0_2.yaml\n",
+      "train_split_1_3 \t val_split_1_3 \t test_split_1\n",
+      "Yaml file will be named as split_1_3.yaml\n",
       "\n",
       "Training, validation and testing set is\n",
-      "train_split0_3 \t val_split0_3 \t test_split0\n",
-      "Yaml file will be named as split0_3.yaml\n",
+      "train_split_1_4 \t val_split_1_4 \t test_split_1\n",
+      "Yaml file will be named as split_1_4.yaml\n",
       "\n"
      ]
     }
