--- a/notebooks/3_introductions_training.ipynb
+++ b/notebooks/3_introductions_training.ipynb
@@ -99,7 +99,7 @@
    "source": [
     "### One yaml file\n",
     "\n",
-    "Let's use the presented yaml file `train_smoke.yaml` from `/configs/training/` in smoke testing. The csv files `train_split0_0.csv` and `val_split0_0.csv` have already been constructed with the script `prepare_data.py`. That said, we are training model using the stratified split of the data. The first rows from both csvs are as follows\n",
+    "Let's use the presented yaml file `train_smoke.yaml` from `/configs/training/` in smoke testing. The csv files `train_split0_0.csv` and `val_split0_0.csv` have already been constructed with the script `create_data_split_csvs.py`. That said, we are training model using the stratified split of the data. The first rows from both csvs are as follows\n",
     "\n",
     "Train csv:\n",
     "```\n",
