--- a/notebooks/cheatsheet.ipynb
+++ b/notebooks/cheatsheet.ipynb
@@ -64,7 +64,7 @@
     "\n",
     "Run:\n",
     "```\n",
-    "python prepare_data.py <yaml file>\n",
+    "python create_data_split_csvs.py <yaml file>\n",
     "```\n",
     "\n",
     "----\n",
