major changes in usage

--- a/notebooks/cheatsheet.ipynb
+++ b/notebooks/cheatsheet.ipynb
@@ -44,27 +44,20 @@
     "----\n",
     "\n",
     "\n",
-    "## <font color = green>Split Data into Csv Files</font>\n",
+    "## <font color = green>Split Data Into CSV Files</font>\n",
     "[Introductions for Data Handling](1_introductions_data_handling.ipynb)\n",
     "\n",
     "Check before use:\n",
     "```\n",
+    "stratified = <boolean: whether to perform a DBwise or a stratified split>\n",
+    "data_dir = <data location>\n",
+    "csv_dir = <csv location>\n",
     "labels = <list of labels (labels as strings in SNOMED CT Codes)>\n",
     "```\n",
-    "- Yaml files in `/configs/data_splitting/`.\n",
-    "    - DBwise:\n",
-    "        - stratified: False \n",
-    "        - data_dir: \\<data location>\n",
-    "        - save_dir: \\<csv location>\n",
-    "    - Stratified:\n",
-    "        - stratified: True\n",
-    "        - data_dir: \\<data location>\n",
-    "        - save_dir: \\<csv location>\n",
-    "        - splits: <dictionary of train/test split>\n",
     "\n",
     "Run:\n",
     "```\n",
-    "python create_data_split_csvs.py <yaml file>\n",
+    "python create_data_split_csvs.py\n",
     "```\n",
     "\n",
     "----\n",
@@ -87,11 +80,14 @@
     "```\n",
     "\n",
     "- Yaml files in `/configs/training/`\n",
-    "    - train_file: \\<csv file (.csv) used in training>\n",
-    "    - val_file: \\<csv file (.csv) used in validation>\n",
-    "    - batch_size: \\<batch size for DataLoader>\n",
-    "    - num_workers: \\<number of workers for DataLoader>\n",
-    "    - epochs: \\<number of epochs in training loop>\n",
+    "    - train_file: csv file (.csv) used in training\n",
+    "    - val_file: csv file (.csv) used in validation\n",
+    "    - batch_size: batch size for DataLoader\n",
+    "    - num_workers: number of workers for DataLoader\n",
+    "    - epochs: number of epochs in training loop\n",
+    "    - lr: learning rate\n",
+    "    - weight_decay: regularization rate\n",
+    "    - device_count: number of devices used (GPUs)\n",
     "\n",
     "Run:\n",
     "```\n",
@@ -108,15 +104,13 @@
     "```\n",
     "    csv_root = <csv location>\n",
     "    data_root = <data location>\n",
-    "\n",
-    "    args.device_count = <number of devices used (GPUs)>\n",
-    "    args.seq_length = <sequent length used in ECGDataset transforms>\n",
-    "    args.normalizetype = <normalize type used in ECGDataset transforms>\n",
     "```\n",
     "\n",
     "- Yaml files in `/configs/predicting/`\n",
-    "    - test_file: \\<csv file (.csv) used in testing>\n",
-    "    - model: \\<model file (.pth) used in testing>\n",
+    "    - test_file: csv file (.csv) used in testing\n",
+    "    - model: model file (.pth) used in testing\n",
+    "    - threshold: decision threshold for predictions\n",
+    "    - device_count: number of devices used (GPUs)\n",
     "\n",
     "Run:\n",
     "```\n",
@@ -127,7 +121,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('physionet')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
