--- a/notebooks/2_physionet_stratified_yaml_files.ipynb
+++ b/notebooks/2_physionet_stratified_yaml_files.ipynb
@@ -9,12 +9,81 @@
     "\n",
     "With this notebook, you can create the yaml files needed in training and testing with a data split which is made  using **stratifiction**. More detailed information about the stratified data split itself is available in the notebook [Introduction for Data Handling](1_introduction_data_handling.ipynb).\n",
     "\n",
-    "------"
+    "------\n",
+    "\n",
+    "Note that the hyperparameters considering training and testing are set in the yaml files."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "10c74753",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# --- Parameters for the yaml files -------------\n",
+    "# Training parameters\n",
+    "batch_size = 10\n",
+    "num_workers = 0\n",
+    "epochs = 5\n",
+    "lr = 0.003\n",
+    "weight_decay = 0.00001\n",
+    "\n",
+    "# Device configurations\n",
+    "device_count = 1\n",
+    "\n",
+    "# -----------\n",
+    "# Decision threshold for predictions\n",
+    "threshold = 0.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa3650ed",
+   "metadata": {},
+   "source": [
+    "Examples of the training and the testing yaml files are provided below.\n",
+    "\n",
+    "**Yaml file for training a model**\n",
+    "```\n",
+    "# INITIAL SETTINGS\n",
+    "train_file: train_split_1_1.csv\n",
+    "val_file: val_split_1_1.csv\n",
+    "\n",
+    "# TRAINING SETTINGS\n",
+    "batch_size: 10\n",
+    "num_workers: 0\n",
+    "epochs: 1\n",
+    "lr: 0.003000\n",
+    "weight_decay: 0.000010\n",
+    "\n",
+    "# VALIDATION SETTINGS\n",
+    "threshold = 0.5\n",
+    "\n",
+    "# DEVICE CONFIGS\n",
+    "device_count: 1\n",
+    "\n",
+    "```\n",
+    "\n",
+    "**Yaml file for testing a model**\n",
+    "\n",
+    "```\n",
+    "# INITIAL SETTINGS\n",
+    "test_file: test_split_1.csv\n",
+    "model: split_1_1.pth\n",
+    "\n",
+    "# TESTING SETTINGS\n",
+    "threshold: 0.500000\n",
+    "\n",
+    "# DEVICE CONFIGS\n",
+    "device_count: 1\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "b88b00d1",
    "metadata": {},
    "outputs": [],
@@ -35,12 +104,7 @@
     "train_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'training', 'train_stratified_smoke')\n",
     "\n",
     "# Where to save the testing yaml files\n",
-    "test_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'predicting', 'prediction_stratified_smoke')\n",
-    "\n",
-    "# Parameters for training yaml files\n",
-    "batch_size = 10\n",
-    "num_workers = 0\n",
-    "epochs = 1"
+    "test_yaml_save_path = os.path.join(abs_path.parent.absolute(), 'configs', 'predicting', 'predict_stratified_smoke')"
    ]
   },
   {
@@ -48,12 +112,12 @@
    "id": "e256917d",
    "metadata": {},
    "source": [
-    "The directory of the csv files of the stratified splits should be found from `/data/split_csvs/`. "
+    "The directory of the csv files of the stratified data split should be found from `/data/split_csvs/`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "1c57b038",
    "metadata": {},
    "outputs": [
@@ -87,12 +151,12 @@
    "id": "5773a438",
    "metadata": {},
    "source": [
-    "Let's combine the right training, validation and prediction splits first, e.g., `train_split0_0.csv`, `val_split0_0.csv` and `test_split0.csv`."
+    "Let's combine the right csv files of training, validation and testing sets first, e.g., `train_split_1_1.csv`, `val_split_1_1.csv` and `test_split_1.csv`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "b0dedbb0",
    "metadata": {
     "scrolled": false
@@ -108,10 +172,6 @@
       "('train_split_1_3.csv', 'val_split_1_3.csv')\n",
       "('train_split_1_4.csv', 'val_split_1_4.csv')\n",
       "\n",
-      "<re.Match object; span=(5, 15), match='_split_1_1'>\n",
-      "<re.Match object; span=(5, 15), match='_split_1_2'>\n",
-      "<re.Match object; span=(5, 15), match='_split_1_3'>\n",
-      "<re.Match object; span=(5, 15), match='_split_1_4'>\n",
       "Training, validation and testing pairs\n",
       "['train_split_1_1.csv', 'val_split_1_1.csv', 'test_split_1.csv']\n",
       "['train_split_1_2.csv', 'val_split_1_2.csv', 'test_split_1.csv']\n",
@@ -171,74 +231,34 @@
    "id": "a4d9d870",
    "metadata": {},
    "source": [
-    "From the sets above we are going to create the yaml files. The base of the training yaml is as follows\n",
-    "\n",
-    "```\n",
-    "# INITIAL SETTINGS\n",
-    "train_file: train_split0_0.csv\n",
-    "val_file: val_split0_0.csv\n",
-    "\n",
-    "# TRAINING SETTINGS\n",
-    "batch_size: 10\n",
-    "num_workers: 0\n",
-    "\n",
-    "# SAVE, LOAD AND DISPLAY INFORMATION\n",
-    "epochs: 1\n",
-    "\n",
-    "```\n",
-    "\n",
-    "and of the prediction yaml file as follows\n",
-    "\n",
-    "```\n",
-    "# INITIAL SETTINGS\n",
-    "test_file: test_split0.csv\n",
-    "model: split0_0.pth\n",
-    "```\n",
-    "\n",
-    "*Feel free to set the attributes for training settings and other information as you want in the very first code chunk.* \n",
-    "\n",
-    "<font color = red>**NOTE!**</font> Feel also free to create only a part of the yaml files. All the train-val-test sets are listed in the `train_val_test` attribute so it's easy to iterate over only a part of it. If you want to part it, remember to consider the `split_nums` attribute too as the yaml files will be named after it. It's a list including split numbers extracted from the csv files."
+    "From the sets above we are going to create the yaml files. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "0a529496",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# List of the train-val-test splits zipped with split numbers\n",
-    "# Feel free to manipulate the all-in list!\n",
-    "\n",
-    "pair_and_split = list(zip(train_val_test, split_nums))\n",
-    "\n",
-    "# NB! pair_and_split will be then be iterated so you need this\n",
-    "#     attribute in the next code chunk (in for-loop)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "6c178529",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training, validation and testing set is\n",
+      "Training, validation and testing sets are\n",
       "train_split_1_1 \t val_split_1_1 \t test_split_1\n",
       "Yaml file will be named as split_1_1.yaml\n",
       "\n",
-      "Training, validation and testing set is\n",
+      "Training, validation and testing sets are\n",
       "train_split_1_2 \t val_split_1_2 \t test_split_1\n",
       "Yaml file will be named as split_1_2.yaml\n",
       "\n",
-      "Training, validation and testing set is\n",
+      "Training, validation and testing sets are\n",
       "train_split_1_3 \t val_split_1_3 \t test_split_1\n",
       "Yaml file will be named as split_1_3.yaml\n",
       "\n",
-      "Training, validation and testing set is\n",
+      "Training, validation and testing sets are\n",
       "train_split_1_4 \t val_split_1_4 \t test_split_1\n",
       "Yaml file will be named as split_1_4.yaml\n",
       "\n"
@@ -250,7 +270,7 @@
     "from ruamel.yaml import YAML\n",
     "  \n",
     "def save_yaml(yaml_str, yaml_path, split):\n",
-    "    ''' Save the given string as a yaml file in the given location.\n",
+    "    ''' Save the given string as a yaml file in the given location\n",
     "    '''\n",
     "    \n",
     "    # Make the yaml directory\n",
@@ -265,24 +285,34 @@
     "    \n",
     "        \n",
     "def create_testing_yaml(test_csv, split):\n",
-    "    ''' Make a yaml file for prediction. The base of it is presented above.\n",
+    "    ''' Make a yaml file for prediction. The base of it is presented above\n",
     "    '''\n",
     "    # The name of the model\n",
-    "    # e.g. trained with a yaml file ´split0_0_smoke.yaml´\n",
-    "    #      model saved as `split0_0_smoke.pth`\n",
+    "    # e.g. trained with a yaml file ´split_0_0_smoke.yaml´\n",
+    "    #      model saved as `split_0_0_smoke.pth`\n",
     "    model_name = split.split('.')[0] + '.pth'\n",
     "    \n",
     "    yaml_str = '''\\\n",
     "# INITIAL SETTINGS\n",
     "    test_file: {}\n",
     "    model: {}\n",
-    "    '''.format(test_csv, model_name)\n",
+    "    \n",
+    "# TESTING SETTINGS\n",
+    "    threshold: {:f}\n",
+    "\n",
+    "# DEVICE CONFIGS\n",
+    "    device_count: {}  \n",
+    "    '''.format(test_csv,\n",
+    "               model_name,\n",
+    "               threshold,\n",
+    "               device_count)\n",
+    "    \n",
     "    yaml_path = test_yaml_save_path\n",
     "    save_yaml(yaml_str, yaml_path, split)\n",
     "    \n",
     "\n",
     "def create_training_yaml(train_csv, val_csv, split):\n",
-    "    ''' Make a yaml file for training. The base of it is presented above.\n",
+    "    ''' Make a yaml file for training. The base of it is presented above\n",
     "    '''\n",
     "    yaml_str = '''\\\n",
     "# INITIAL SETTINGS\n",
@@ -292,19 +322,33 @@
     "# TRAINING SETTINGS\n",
     "    batch_size: {}\n",
     "    num_workers: {}\n",
-    "\n",
-    "# SAVE, LOAD AND DISPLAY INFORMATION\n",
     "    epochs: {}\n",
-    "    '''.format(train_csv, val_csv,\n",
-    "              batch_size, num_workers, epochs)\n",
+    "    lr: {:f}\n",
+    "    weight_decay: {:f}\n",
+    "    \n",
+    "# VALIDATION SETTINGS\n",
+    "    threshold: {:f}\n",
+    "\n",
+    "# DEVICE CONFIGS\n",
+    "    device_count: {}   \n",
+    "    '''.format(train_csv,\n",
+    "               val_csv,\n",
+    "               batch_size,\n",
+    "               num_workers, \n",
+    "               epochs,\n",
+    "               lr,\n",
+    "               weight_decay,\n",
+    "               threshold,\n",
+    "               device_count)\n",
+    "    \n",
     "    yaml_path = train_yaml_save_path\n",
     "    save_yaml(yaml_str, yaml_path, split)\n",
     "\n",
-    "    \n",
-    "for pair, split in pair_and_split:\n",
+    "sets_and_name = list(zip(train_val_test, split_nums))\n",
+    "for pair, split in sets_and_name:\n",
     "    train_tmp, val_tmp, test_tmp = pair[0], pair[1], pair[2]\n",
     "    \n",
-    "    print('Training, validation and testing set is')\n",
+    "    print('Training, validation and testing sets are')\n",
     "    print(train_tmp.split('.')[0], '\\t', val_tmp.split('.')[0], '\\t', test_tmp.split('.')[0])\n",
     "    print('Yaml file will be named as', split)\n",
     "    print()\n",
@@ -321,17 +365,17 @@
    "id": "9d9f7428",
    "metadata": {},
    "source": [
-    "Now all the yaml files for training, validation and prediction are created! The training yaml files are located in `/configs/training/train_stratified_smoke/` named as `split0_0.yaml`, `split0_1.yaml`. `split0_2.yaml` and `split0_3.yaml`, and the prediction yaml files in `/configs/predicting/predict_stratified_smoke/` named with the same names.\n",
+    "Now all the yaml files for training, validation and testing are created! The training yaml files are located in `/configs/training/train_stratified_smoke/` named as `split_1_1.yaml`, `split0_1.yaml`. `split_1_2.yaml` and `split_1_3.yaml`, and the testing yaml files in `/configs/predicting/predict_stratified_smoke/` named with the same names.\n",
     "\n",
-    "<font color=red>**NOTE 1!**</font> It is extremely important that in the test yaml file the model is set with the same name as the yaml file which the model is trained with. E.g. when a model is trained using `split0_0.yaml`, it will be saved as `split0_0.pth`. This makes using the repository much easier and simpler. Mind this, if you want to edit the code below.\n",
+    "<font color=red>**NOTE 1!**</font> It is extremely important that in the test yaml file the model is set with the same name as the yaml file which the model is trained with. E.g. when a model is trained using `split_1_1.yaml`, it will be saved as `split_1_1.pth`. This makes using the repository much easier and simpler. Mind this, if you want to edit the code below.\n",
     "\n",
-    "<font color=red>**NOTE 2!**</font> If you are now wondering why the yaml files don't have the csv values --- `train_file`, `val_file` and `test_file` --- in single quotation marks, it's ok. Scripts are able to read and load the values from the yaml files even without those marks!"
+    "<font color=red>**NOTE 2!**</font> If you are now wondering why the yaml files don't have the csv values --- `train_file`, `val_file` and `test_file` --- in single quotation marks, it's ok. Scripts are able to read and load the values from the yaml files even without those marks."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('physionet')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
